# LoveLetter-BoardGame

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  card.cpp  card.h  loveletter.cpp  loveletter.h  main.cpp  makefile  meson.build  player.cpp  player.h  unitTest.cpp
.github/workflows/: build.yml  cpp_ci.yml  test-clang-format.yml
include/: card.h  cardPile.h  game.h  player.h  playerGroup.h
src/: card.cpp  cardPile.cpp  game.cpp  main.cpp  player.cpp  playerGroup.cpp
unittest/: testCard.cpp  testCardPile.cpp  testGame.cpp  testPlayer.cpp  testPlayerGroup.cpp
